Set up development database as ENV_VAR

--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -1,7 +1,7 @@
 development:
   sessions:
     default:
-      uri: mongodb://development:picshare@alex.mongohq.com:10034/picshare-development
+      uri: <%= ENV['MONGOHQ_URL'] %>
 
 production:
   sessions:
